Quick update: - Last update removed the window frame on selecting arguments, oops. But it was an easy, one line fix. - I guess i forgot to check the configure transforms part in the last update, ooops. It worked fine but still would delete the already calculated values. Now i fixed it, or so i hope. - Fixed a problem where the color select window (also any window created with my Window class for that matter) could be behind other elements. I just changed it's CSS position from `absolute` to `fixed`, this is working fine now, but if it introduces problems in the future, a more definitive solution is needed. - Fixed a problem where the Chart would throw an error if the data were an empty array, now it just ignores it. I also made a change so the transformation panel also disregards empty results. - Changed the getRange function in the dataHandler, now it works with data that is also not hierarchical. I also changed the Chart to call getRange when plotting non hierarchical data, this has the effect of reducing the number of points needed to plot, by discarding the points outside the zoom range. Before i would only call this on hierarchical data, but realized that there was a huge slowdown caused when zooming and panning on non-hierarchical ones, all the unnecessary points were also being plotted, now it's fixed. - Changed also how the getRange works in the dataHandler, now it does not assume equally separated points, this is much more flexible. Although it stills assumes an ordered data from lowest to highest since it uses a logarithmic search to find the indexes. But i plan to just sort all data in the future anyway, i don't think there is a fast way to have hierarchical data with random points, so sorting it is. - These changes in dataHandler allowed me to remove the unnecessary dx key from hierarchies data types.

--- a/css/window.css
+++ b/css/window.css
@@ -1,6 +1,6 @@
 .window {z-index: 9999;}
 .window, .window .window-overlay {
-  position: absolute;
+  position: fixed;
   top: 0; left: 0;
   height: 100%; width: 100%;
 }
